--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -150,6 +150,35 @@ set_target_properties(${ZLIB_NAME}
     ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
     ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
 
+#minizip-ng
+set(MZ_BZIP2 OFF)
+set(MZ_LZMA OFF)
+set(MZ_ZSTD OFF)
+set(MZ_PKCRYPT ON)
+set(MZ_WZAES ON)
+set(SKIP_INSTALL_LIBRARIES ON)
+set(MZ_FETCH_LIBS OFF)
+add_subdirectory(third-party/minizip-ng)
+set_property(TARGET minizip PROPERTY FOLDER "MazeThirdParty")
+target_include_directories(
+    minizip
+    PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
+    PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib")
+set_target_properties(minizip
+    PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
+    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
+
 # libpng
 if(MAZE_TARGET_PLATFORM_IS_EMSCRIPTEN)
     set(M_LIBRARY "")
