Minizip crypt algorithm changed

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -155,7 +155,7 @@ set(MZ_BZIP2 OFF)
 set(MZ_LZMA OFF)
 set(MZ_ZSTD OFF)
 set(MZ_PKCRYPT ON)
-set(MZ_WZAES ON)
+set(MZ_WZAES OFF)
 set(SKIP_INSTALL_LIBRARIES ON)
 set(MZ_FETCH_LIBS OFF)
 add_subdirectory(third-party/minizip-ng)
