Minizip CMake building fixed

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -111,7 +111,7 @@ else()
     set(ZLIB_NAME zlibstatic)
 endif()
 set(ZLIB_LIBRARY ${ZLIB_NAME})
-set(ZLIB_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/third-party/zlib")
+set(ZLIB_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/third-party/zlib" CACHE PATH "Zlib include dir" FORCE)
 add_subdirectory(third-party/zlib)
 set_property(TARGET zlib PROPERTY FOLDER "MazeThirdParty")
 set_property(TARGET zlibstatic PROPERTY FOLDER "MazeThirdParty")
