Gamepads support added

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -50,202 +50,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 # Third Party Libs
 #
 ##########################################
-
-# nedmalloc
-add_subdirectory(third-party/nedmalloc)
-set_property(TARGET nedmalloc PROPERTY FOLDER "MazeThirdParty") 
-
-# tinyxml2
-set(BUILD_TESTS OFF)
-add_subdirectory(third-party/tinyxml2)
-set_property(TARGET tinyxml2 PROPERTY FOLDER "MazeThirdParty")
-set_property(TARGET uninstall PROPERTY FOLDER "MazeThirdParty")
-set_target_properties(tinyxml2
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
-
-# jsoncpp
-set(JSONCPP_WITH_TESTS OFF CACHE BOOL "Compile and (for jsoncpp_check) run JsonCpp test executables" FORCE)
-set(JSONCPP_WITH_CMAKE_PACKAGE OFF CACHE BOOL "Generate and install cmake package files" FORCE)
-# set(JSONCPP_LIB_BUILD_STATIC ON)
-# set(JSONCPP_LIB_BUILD_SHARED OFF)
-set(BUILD_OBJECT_LIBS OFF CACHE BOOL "Build jsoncpp_lib as a object library." FORCE)
-add_subdirectory(third-party/jsoncpp)
-set(JSONCPP_LIBRARY jsoncpp_static)
-set_property(TARGET ${JSONCPP_LIBRARY} PROPERTY FOLDER "MazeThirdParty")
-if(BUILD_OBJECT_LIBS)
-    set(JSONCPP_OBJECT jsoncpp_object)
-    set_property(TARGET ${JSONCPP_OBJECT} PROPERTY FOLDER "MazeThirdParty")
-endif()
-set_target_properties(${JSONCPP_LIBRARY}
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
-
-
-# zlib
-if(BUILD_SHARED_LIBS)
-    set(ZLIB_NAME zlib)
-else()
-    set(ZLIB_NAME zlibstatic)
-endif()
-set(ZLIB_LIBRARY ${ZLIB_NAME})
-set(ZLIB_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/third-party/zlib" CACHE PATH "Zlib include dir" FORCE)
-add_subdirectory(third-party/zlib)
-set_property(TARGET zlib PROPERTY FOLDER "MazeThirdParty")
-set_property(TARGET zlibstatic PROPERTY FOLDER "MazeThirdParty")
-set_property(TARGET minigzip PROPERTY FOLDER "MazeThirdParty")
-set_property(TARGET example PROPERTY FOLDER "MazeThirdParty")
-target_include_directories(
-    minigzip
-    PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-    PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib")
-target_include_directories(
-    example
-    PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-    PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib")
-if(HAVE_OFF64_T)
-    target_include_directories(
-        minigzip64
-        PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-        PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib")
-    target_include_directories(
-        example64
-        PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-        PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib")
-endif()
-set_target_properties(${ZLIB_NAME}
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
-
-#minizip-ng
-set(MZ_BZIP2 OFF)
-set(MZ_LZMA OFF)
-set(MZ_ZSTD OFF)
-set(MZ_PKCRYPT ON)
-set(MZ_WZAES OFF)
-set(SKIP_INSTALL_LIBRARIES ON)
-set(MZ_FETCH_LIBS OFF)
-add_subdirectory(third-party/minizip-ng)
-set_property(TARGET minizip PROPERTY FOLDER "MazeThirdParty")
-target_include_directories(
-    minizip
-    PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-    PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib")
-set_target_properties(minizip
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
-
-# libpng
-if(MAZE_TARGET_PLATFORM_IS_EMSCRIPTEN)
-    set(M_LIBRARY "")
-endif()
-set(PNG_TESTS OFF CACHE BOOL "Build libpng tests" FORCE)
-set(SKIP_INSTALL_ALL ON)
-if(BUILD_SHARED_LIBS)
-    set(PNGLIB_NAME png)
-    set(PNG_SHARED ON)
-    set(PNG_STATIC OFF)
-else()
-    set(PNGLIB_NAME png_static)
-    set(PNG_SHARED OFF)
-    set(PNG_STATIC ON)
-endif()
-add_subdirectory(third-party/libpng)
-set_property(TARGET ${PNGLIB_NAME} PROPERTY FOLDER "MazeThirdParty")
-set_property(TARGET genfiles PROPERTY FOLDER "MazeThirdParty")
-target_include_directories(
-    ${PNGLIB_NAME}
-    PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-    PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib"
-    PUBLIC "${PROJECT_SOURCE_DIR}/third-party/libpng"
-    PUBLIC "${PROJECT_BINARY_DIR}/third-party/libpng")
-if(BUILD_SHARED_LIBS)
-    target_include_directories(
-        png-fix-itxt
-        PUBLIC "${PROJECT_SOURCE_DIR}/third-party/zlib"
-        PUBLIC "${PROJECT_BINARY_DIR}/third-party/zlib"
-        PUBLIC "${PROJECT_SOURCE_DIR}/third-party/libpng"
-        PUBLIC "${PROJECT_BINARY_DIR}/third-party/libpng")
-endif()
-set_target_properties(${PNGLIB_NAME}
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
-
-# Box2d
-set(BOX2D_BUILD_EXAMPLES OFF)
-set(BOX2D_BUILD_TESTBED OFF)
-set(BOX2D_BUILD_UNIT_TESTS OFF)
-add_subdirectory(third-party/box2d)
-set_property(TARGET box2d PROPERTY FOLDER "MazeThirdParty")
-set_target_properties(box2d
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/${MAZE_ARCH_SUFFIX}")
+include("MazeThirdParty.cmake")
 
 
 ##########################################
