--- a/examples/maze-plugin-profiler-test/CMakeLists.txt
+++ b/examples/maze-plugin-profiler-test/CMakeLists.txt
@@ -25,7 +25,12 @@ cmake_minimum_required(VERSION 3.6)
 
 
 ##########################################
-project(maze-plugin-profiler)
+project(maze-plugin-profiler-test)
+
+
+##########################################
+set(EXAMPLE_NAME "${PROJECT_NAME}")
+set(EXAMPLE_MAZE_LIBS maze-core maze-graphics maze-ui maze-engine maze-sound maze-debugger maze-plugin-profiler)
 
 
 ##########################################
@@ -35,30 +40,19 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../../engine/cmake/Macros.cmake")
 
 
 ##########################################
-# add_subdirectory("${MAZE_ENGINE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/MazeEngine")
+add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler")
 
 
 ##########################################
-maze_add_module(
-    ${PROJECT_NAME}
-    INCLUDE_DIR "include/maze-plugin-profiler"
-    SRC_DIR "src"
-    FORWARD_HEADER MazeProfilerHeader)
+maze_add_sources(${CMAKE_CURRENT_SOURCE_DIR}/../templates/example-wrapper ADDITIONAL_EXAMPLE_FILES)
+maze_sort_sources("${ADDITIONAL_EXAMPLE_FILES}" ADDITIONAL_EXAMPLE_FILES)
 
 
-##########################################    
+##########################################
+include("${CMAKE_CURRENT_SOURCE_DIR}/../templates/CMakeExampleTemplate.cmake")
+
+
+##########################################
 target_include_directories(
-    ${PROJECT_NAME}
-    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
-
-
-##########################################
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "MazePlugins")
-
-
-##########################################
-target_link_libraries(
-    ${PROJECT_NAME}
-    PUBLIC maze-core
-    PUBLIC maze-graphics
-    PUBLIC maze-ui)
+    ${EXAMPLE_NAME}
+    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../templates/example-wrapper")
