--- a/examples/maze-plugin-profiler-view-test/CMakeLists.txt
+++ b/examples/maze-plugin-profiler-view-test/CMakeLists.txt
@@ -40,6 +40,12 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../../engine/cmake/Macros.cmake")
 
 
 ##########################################
+if(MAZE_RENDER_SYSTEM_OPENGL_ENABLED)
+    list(APPEND EXAMPLE_MAZE_LIBS maze-render-system-opengl-core maze-render-system-opengl3)
+endif()
+
+
+##########################################
 add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler-view" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler-view")
 
 
