--- a/examples/maze-example-demo00/CMakeLists.txt
+++ b/examples/maze-example-demo00/CMakeLists.txt
@@ -30,7 +30,7 @@ project(maze-example-demo00)
 
 ##########################################
 set(EXAMPLE_NAME "${PROJECT_NAME}")
-set(EXAMPLE_MAZE_LIBS maze-core maze-graphics maze-ui maze-engine maze-sound maze-debugger maze-particles)
+set(EXAMPLE_MAZE_LIBS maze-core maze-graphics maze-ui maze-engine maze-sound maze-debugger maze-particles maze-plugin-profiler-view)
 
 
 ##########################################
@@ -40,12 +40,22 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../../engine/cmake/Macros.cmake")
 
 
 ##########################################
+if(MAZE_RENDER_SYSTEM_OPENGL_ENABLED)
+    list(APPEND EXAMPLE_MAZE_LIBS maze-render-system-opengl-core maze-render-system-opengl3)
+endif()
+
+
+##########################################
 maze_add_sources(${CMAKE_CURRENT_SOURCE_DIR}/../templates/example-wrapper ADDITIONAL_EXAMPLE_FILES)
 maze_sort_sources("${ADDITIONAL_EXAMPLE_FILES}" ADDITIONAL_EXAMPLE_FILES)
 
 
 ##########################################
 include("${CMAKE_CURRENT_SOURCE_DIR}/../templates/CMakeExampleTemplate.cmake")
+
+
+##########################################
+add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler-view" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler-view")
 
 
 ##########################################
