Plugin loader PNG added

--- a/examples/maze-example-demo00/CMakeLists.txt
+++ b/examples/maze-example-demo00/CMakeLists.txt
@@ -30,7 +30,16 @@ project(maze-example-demo00)
 
 ##########################################
 set(EXAMPLE_NAME "${PROJECT_NAME}")
-set(EXAMPLE_MAZE_LIBS maze-core maze-graphics maze-ui maze-engine maze-sound maze-debugger maze-particles maze-plugin-profiler-view)
+set(EXAMPLE_MAZE_LIBS
+    maze-core
+    maze-graphics
+    maze-ui
+    maze-engine
+    maze-sound
+    maze-debugger
+    maze-particles
+    maze-plugin-profiler-view
+    maze-plugin-loader-png)
 
 
 ##########################################
@@ -56,6 +65,7 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../templates/CMakeExampleTemplate.cmake")
 
 ##########################################
 add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler-view" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler-view")
+add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-loader-png" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-loader-png")
 
 
 ##########################################
