--- a/examples/maze-example-demo00/CMakeLists.txt
+++ b/examples/maze-example-demo00/CMakeLists.txt
@@ -39,7 +39,8 @@ set(EXAMPLE_MAZE_LIBS
     maze-debugger
     maze-particles
     maze-plugin-profiler-view
-    maze-plugin-loader-png)
+    maze-plugin-loader-png
+    maze-plugin-water)
 
 
 ##########################################
@@ -66,6 +67,7 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../templates/CMakeExampleTemplate.cmake")
 ##########################################
 add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler-view" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler-view")
 add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-loader-png" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-loader-png")
+add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-water" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-water")
 
 
 ##########################################
