Console plugin progress

--- a/plugins/maze-plugin-console/CMakeLists.txt
+++ b/plugins/maze-plugin-console/CMakeLists.txt
@@ -25,20 +25,7 @@ cmake_minimum_required(VERSION 3.6)
 
 
 ##########################################
-project(maze-plugin-profiler-view-test)
-
-
-##########################################
-set(EXAMPLE_NAME "${PROJECT_NAME}")
-set(EXAMPLE_MAZE_LIBS
-    maze-core
-    maze-graphics
-    maze-ui
-    maze-engine
-    maze-sound
-    maze-debugger
-    maze-plugin-profiler-view
-    maze-plugin-console)
+project(maze-plugin-console)
 
 
 ##########################################
@@ -48,26 +35,26 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../../engine/cmake/Macros.cmake")
 
 
 ##########################################
-if(MAZE_RENDER_SYSTEM_OPENGL_ENABLED)
-    list(APPEND EXAMPLE_MAZE_LIBS maze-render-system-opengl-core maze-render-system-opengl3)
-endif()
+maze_add_module(
+    ${PROJECT_NAME}
+    INCLUDE_DIR "include/${PROJECT_NAME}"
+    SRC_DIR "src"
+    FORWARD_HEADER MazeConsoleHeader)
 
 
-##########################################
-maze_add_sources(${CMAKE_CURRENT_SOURCE_DIR}/../templates/example-wrapper ADDITIONAL_EXAMPLE_FILES)
-maze_sort_sources("${ADDITIONAL_EXAMPLE_FILES}" ADDITIONAL_EXAMPLE_FILES)
-
-
-##########################################
-include("${CMAKE_CURRENT_SOURCE_DIR}/../templates/CMakeExampleTemplate.cmake")
-
-
-##########################################
-add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler-view" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler-view")
-add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-console" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-console")
-
-
-##########################################
+##########################################    
 target_include_directories(
-    ${EXAMPLE_NAME}
-    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../templates/example-wrapper")
+    ${PROJECT_NAME}
+    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+
+
+##########################################
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "MazePlugins")
+
+
+##########################################
+target_link_libraries(
+    ${PROJECT_NAME}
+    PUBLIC maze-core
+    PUBLIC maze-graphics
+    PUBLIC maze-ui)
