--- a/examples/maze-example-particles/CMakeLists.txt
+++ b/examples/maze-example-particles/CMakeLists.txt
@@ -38,7 +38,8 @@ set(EXAMPLE_MAZE_LIBS
     maze-editor-tools
     maze-particles
     maze-plugin-profiler-view
-    maze-plugin-loader-png)
+    maze-plugin-loader-png
+    maze-plugin-particles-editor-tools)
 
 
 ##########################################
@@ -59,6 +60,7 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../templates/CMakeExampleTemplate.cmake")
 ##########################################
 add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-profiler-view" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-profiler-view")
 add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-loader-png" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-loader-png")
+add_subdirectory("${MAZE_DIR}/plugins/maze-plugin-particles-editor-tools" "${CMAKE_CURRENT_BINARY_DIR}/maze-plugin-particles-editor-tools")
 
 
 ##########################################
