--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "third-party/stb"]
 	path = third-party/stb
 	url = git@github.com:Tinaynox/stb.git
+[submodule "third-party/freetype2"]
+	path = third-party/freetype2
+	url = git://git.savannah.gnu.org/freetype/freetype2.git
